logs/rtt.20260323-195041.log
   Compiling apas-verus v0.1.0 (/home/milnes/projects/APAS-VERUS-agent2)
error[E0432]: unresolved import `crate::Chap38::BSTParaStEph::BSTParaStEph::view_ord_consistent`
  --> src/Chap43/OrderedTableMtEph.rs:28:9
   |
28 |     use crate::Chap38::BSTParaStEph::BSTParaStEph::view_ord_consistent;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `view_ord_consistent` in `Chap38::BSTParaStEph::BSTParaStEph`

warning: variable does not need to be mutable
    --> src/Chap43/OrderedTableStEph.rs:2570:17
     |
2570 |             let mut right_tree = ParamBST::<Pair<K, V>>::new();
     |                 ----^^^^^^^^^^
     |                 |
     |                 help: remove this `mut`
     |
     = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0432`.
warning: `apas-verus` (lib) generated 1 warning
error: could not compile `apas-verus` (lib) due to 1 previous error; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
warning: `apas-verus` (lib test) generated 1 warning (1 duplicate)
error: could not compile `apas-verus` (lib test) due to 1 previous error; 1 warning emitted
error: command `/home/milnes/.rustup/toolchains/1.94.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --message-format json-render-diagnostics --release` exited with code 101
Elapsed: 10s
